--- a/Le_Site_SAE.05-06/index.html
+++ b/Le_Site_SAE.05-06/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Webedia</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="webedia-studios-logo-white.png">
 </head>
 <header>
     <nav>
