--- a/Le_Site_SAE.05-06/index.html
+++ b/Le_Site_SAE.05-06/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Webedia</title>
     <link rel="stylesheet" href="style.css"> 
-    <link rel="icon" href="logo_webedia.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="logo_webedia.ico">
 </head>
 <header>
     <nav>
