--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li id="logo"><a href="#">Webedia</a></li>
                     <li><a href="#Résaux">Nos Résaux</a></li>
-                    <li><a href="page_b.html" href="site_web_stats_SAE.05-06.html">Statistique</a></li>
+                    <li><a href="page_b.html" href="Page stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
                     <li><a href="#contact">Histoire</a></li>
                 </ul>
             </nav>
