--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -14,7 +14,7 @@
                     <li id="logo"><a href="#">Webedia</a></li>
                     <li><a href="#Résaux">Nos Résaux</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page%20stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
-                    <li><a href="#contact">Histoire</a></li>
+                    <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
                 </ul>
             </nav>
             <div id="imageprincipale">
