--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title> Histoire </title>
-    <link rel="shortcut icon" href="medias/webedia-studios-logo-white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="webedia-studios-logo-white.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li id="logo"><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html"><img src="media/webedia_logo.png"></a></li>
+                <li id="logo"><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html"><img src="webedia_logo.png"></a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page%20stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
                 <li><a href="#">Histoire</a></li>
             </ul>
