--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -56,7 +56,7 @@
             <div id="deuxièmeTrait"></div>
             <div id="copyrightEtIcons">
                 <div id="copyright">
-                    <span>© fromScratch(); 2022</span>
+                    <span>Tous droits réservés 2022 ©WEBEDIA | Développé par LCF</span>
                 </div>
             <div id="icon">
                 <a href="http://www.twitter.fr"><i class=
