--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -12,15 +12,16 @@
             <ul>
                 <li id="logo"><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html"><img src="medias/webedia_logo.png"></a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page%20stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
-                <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
+                <li><a href="#">Histoire</a></li>
             </ul>
         </nav>
     
+		
+	<p id="slogan"> << Engaging audiences with passion >> </p>
         <p id="info1"> Webedia est une société media-tech et l’un des acteurs mondiaux majeurs du divertissement en ligne. </p>
-
         <p id="info2"> Expertisé sur 15 ans dans des audiences digitales et de l’édition de médias numériques, ils accompagnes les plus importants créateurs, producteurs, 
         diffuseurs et les marques, ayant un savoir-faire unique de production et de distribution de contenues, ils ont la capacité de le faire sur toutes les plateformes.</p>
-       <p id="info3"> Webedia est présent dans plus de 15 pays, tels qu’en Espagne, Brésil, Allemagne, Mexique, Pologne et bien d’autres.
+       	<p id="info3"> Webedia est présent dans plus de 15 pays, tels qu’en Espagne, Brésil, Allemagne, Mexique, Pologne et bien d’autres.
         La distribution de contenus, l’édition de marques et supports médias, la gestion de créateurs et la production audiovisuelle sont les principaux métier où Webedia structure ses activités. </p>
     
         <h1> Découvrez son histoire... </h1>
@@ -30,11 +31,11 @@
     <div class="timeline">
 		<ul>
 			<li>
-				<span>2007</span>
+				<span>27 novembre 2007</span>
 				<div class="content">
 					<h3>Naissance de Webedia</h3>
 					<p>
-						Webedia est une entreprise créée en France en 2007 par Cédric Siré
+						Webedia est une entreprise créée en France par Cédric Siré.
 					</p>
 				</div>
 			</li>
@@ -43,25 +44,104 @@
 				<div class="content">
 					<h3>Rachat du comparateur de prix : Shopoon</h3>
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+						Celui-ci lancé en mai 2006 par La Redoute. Webedia renomme ce comparateur de prix par : PureShopping.
 					</p>
 				</div>
 			</li>
 			<li>
-				<span>15th April 2018</span>
+				<span>janvier 2011</span>
 				<div class="content">
-					<h3>What Is Lorem Ipsum?</h3>
+					<h3>Rachat d'Ozap</h3>
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+						Ils rachète au groupe M6 ce site spécialisé dans les médias, Webedia l'ont renommé Puremédias. 
+						Puis, ils lance également Purebreak, une plateforme d'actualité à destination des milléniaux puis Purecharts, un site d'actualité musicale. 
 					</p>
 				</div>
 			</li>
 			<li>
-				<span>22nd Mars 2017</span>
+				<span>2013</span>
 				<div class="content">
-					<h3>What Is Lorem Ipsum?</h3>
+					<h3>Nouvelles acquisitions</h3>
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+						Fimalac devient actionnaire majoritaire du groupe en mai. Le même mois, Webedia acquis donc Terrafeminia puis rachète en Juillet, pour 67 Millions d'euros, 
+						AlloCiné. En décembre, Webedia ajoute le site culinaire 750g et la plateforme culturelle Exponaute
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>2014</span>
+				<div class="content">
+					<h3>Autres acquisitions</h3>
+					<p>
+						Pour renforcer son poids dans l'univers du numérique, le propriétaire de CanalBlog, le groupe Fimalac avec sa nouvelle filiale Webedia, ajoute Overblog
+						en Avril puis, en Juin, Eklablog.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>Septembre 2015</span>
+				<div class="content">
+					<h3>Mixicom</h3>
+					<p>
+						Ce rachat, du premier réseau de chaînes YouTube en France, permet le rassemblement des vedettes de la plateforme : Norman, Cyprien, Squeezie et Natoo.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>Novembre 2015</span>
+				<div class="content">
+					<h3>Travail critiqué</h3>
+					<p>
+						Condamné pour atteinte à la vie privée par le tribunal de grande instance de Nanterre pour un article sur le site Purepeople Webedia est critiqué pour le travail « précaire » 
+						de ses journalistes et son native advertising, la rédaction rédigeant parfois des publicités.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>Fin 2015</span>
+				<div class="content">
+					<h3>Guillaume Multrier</h3>
+					<p>
+						Cofondateur, il quitte le groupe pour créer une entreprise spécialisée dans l'hôtellerie d'une valorisation revendiquée supérieure au milliard d'euros.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>Juin 2020</span>
+				<div class="content">
+					<h3>Pandémie de Covid-19</h3>
+					<p>
+						Dans le contexte de cette pandémie sur le pays, l’entreprise annonce un plan d'économies et une « rupture conventionnelle collective sur la base du volontariat » 
+						pour 80 à 90 personnes en France et 150 départs de collaborateurs à l'étranger.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>Avril 2021</span>
+				<div class="content">
+					<h3>"Mur de cookies"</h3>
+					<p>
+						Webedia met en place ce système sur l'ensemble de ses sites qui en conditionne l'accès : ceux-ci ne sont gratuits qu'à condition d'accepter le dépôt de l'entièreté des cookies publicitaires 
+						tandis que la formule payante permet leur blocage.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>2022</span>
+				<div class="content">
+					<h3>Marc Ladreit de Lacharrière</h3>
+					<p>
+						Le patron de Fimalac réfute les rumeurs de mise en vente de Webedia, mais concède rechercher de nouveaux partenaires pour accélérer son développement à l'international.
+					</p>
+				</div>
+			</li>
+			<li>
+				<span>Aujourd'hui</span>
+				<div class="content">
+					<h3>Webedia maintenant</h3>
+					<p>
+						Présent dans plus de vingt pays tel que l'Espagne, le Brésil, l'Allemagne, la Pologne, le Mexique, Webedia rassemble plus de 276 millions de visiteurs uniques mensuels dans le monde.
+						L'entreprise se place à la 6ᵉ place des groupes de médias français en ligne avec une audience moyenne de vingt-huit millions de visiteurs uniques par mois.
 					</p>
 				</div>
 			</li>
