--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title> Histoire </title>
-    <link rel="shortcut icon" href="medias/webedia-studios-logo-white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="webedia-studios-logo-white.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li id="logo"><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html"><img src="medias/webedia_logo.png"></a></li>
+                <li id="logo"><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html"><img src="webedia_logo.png"></a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page%20stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
                 <li><a href="#">Histoire</a></li>
             </ul>
         </nav>
     
 		
-	<p id="slogan"> << Engaging audiences with passion >> </p>
         <p id="info1"> Webedia est une société media-tech et l’un des acteurs mondiaux majeurs du divertissement en ligne. </p>
-        <p id="info2"> Expertisé sur 15 ans dans des audiences digitales et de l’édition de médias numériques, ils accompagnes les plus importants créateurs, producteurs, 
-        diffuseurs et les marques, ayant un savoir-faire unique de production et de distribution de contenues, ils ont la capacité de le faire sur toutes les plateformes.</p>
-       	<p id="info3"> Webedia est présent dans plus de 15 pays, tels qu’en Espagne, Brésil, Allemagne, Mexique, Pologne et bien d’autres.
-        La distribution de contenus, l’édition de marques et supports médias, la gestion de créateurs et la production audiovisuelle sont les principaux métier où Webedia structure ses activités. </p>
+		<p id="slogan"> << Engaging audiences with passion >> </p>
+		
+		<div id="TraitSeparation"></div>
     
         <h1> Découvrez son histoire... </h1>
     </header>
