--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -51,8 +51,8 @@
 				<div class="content">
 					<h3>Rachat d'Ozap</h3>
 					<p>
-						Ils rachète au groupe M6 ce site spécialisé dans les médias, Webedia l'ont renommé Puremédias. 
-						Puis, ils lance également Purebreak, une plateforme d'actualité à destination des milléniaux puis Purecharts, un site d'actualité musicale. 
+						Ils rachètent, au groupe M6, ce site spécialisé dans les médias, Webedia l'ont renommé Puremédias. 
+						Puis, ils lancent également Purebreak, une plateforme d'actualité à destination des milléniaux puis Purecharts, un site d'actualité musicale. 
 					</p>
 				</div>
 			</li>
