--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <title>Webedia</title>
+        <title>Webedia | Page d'Accueil</title>
         <link rel="icon" type="image/x-icon" href="media/webedia-studios-logo-white.ico.png">
     </head>
     <body>
@@ -12,8 +12,10 @@
             <nav>
                 <ul>
                     <li id="logo"><img src="media/webedia_logo.png"></li>
+                    <li><a href="">Economie</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page%20stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
+                    <li><a href="#">Accueil</a></li>
                 </ul>
             </nav>
             <div id="imageprincipale">
@@ -25,48 +27,38 @@
         <section id="presentation">
             <div id="textIntro">
                 <h2>Les Informations</h2>
-                <h2>Qu'est ce que Webedia ? :</h2>
-                <p>Expertisé sur 15 ans dans des audiences digitales et de l’édition de médias numériques, ils accompagnes les plus importants créateurs, producteurs, diffuseurs et les marques, ayant un savoir-faire unique de production et de distribution de contenues, ils ont la capacité de le faire sur toutes les plateformes.
-
-                    Webedia est présent dans plus de 15 pays, tels qu’en Espagne, Brésil, Allemagne, Mexique, Pologne et bien d’autres. La distribution de contenus, l’édition de marques et supports médias, la gestion de créateurs et la production audiovisuelle sont les principaux métier où Webedia structure ses activités</p>
+                <h3>Qu'est ce que Webedia ? :</h3>
+                <p>Expertisé sur 15 ans dans des audiences digitales et de l’édition de médias numériques, ils accompagnes les plus importants créateurs, producteurs, diffuseurs et les marques, ayant un savoir-faire unique de production et de distribution de contenues, ils ont la capacité de le faire sur toutes les plateformes. Webedia est présent dans plus de 15 pays, tels qu’en Espagne, Brésil, Allemagne, Mexique, Pologne et bien d’autres. La distribution de contenus, l’édition de marques et supports médias, la gestion de créateurs et la production audiovisuelle sont les principaux métier où Webedia structure ses activités</p>
             </div>
             <div id="prestations">
                 <div class="imagesPrestations">
                     <h4>Les Statisqtiques</h4>
-                    <a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page%20stats/site_web_stats_SAE.05-06.html"><img src="media/arduino1.jpg" 
+                    <a href="#"><img src="media/arduino1.jpg" 
                         alt="arduino"></a>
                 </div>
                 <div class="imagesPrestations">
                     <h4>Le Site Principal</h4>
-                    <a href="https://fr.webedia-group.com" target="_blank"><img src="media/Baby-foot1.jpg" 
+                    <a href="https://fr.webedia-group.com"><img src="media/Baby-foot1.jpg" 
                         alt="babyfoot"></a>
                 </div>
                 <div class="imagesPrestations">
                     <h4>Son Histoire</h4>
-                    <a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html"><img src="media/argent1.jpg" 
+                    <a href="#"><img src="media/argent1.jpg" 
                         alt="budget"></a>
                 </div>
             </div>
         </section>
         <footer>
-            <h2 id="contact">Contactez-nous</h2>
-            <form>
-                <input placeholder="Nom">
-                <input placeholder="E-mail">
-                <textarea placeholder="Votre message ici..."></textarea>
-                <button>Envoyer</button>
-            </form>
-            <div id="deuxièmeTrait"></div>
             <div id="copyrightEtIcons">
                 <div id="copyright">
                     <span>Tous droits réservés 2022 ©WEBEDIA | Développé par LCF</span>
                 </div>
             <div id="icon">
-                <a href="https://twitter.com/WebediaFR" target="_blank"><i class=
+                <a href="http://www.twitter.fr"><i class=
                 "fa fa-twitter"></i></a>
                 <a href="http://www.instagram.fr"><i class=
                 "fa fa-instagram"></i></a>
-                <a href="https://www.facebook.com/webedia" target="_blank"><i class=
+                <a href="http://www.facebook.fr"><i class=
                 "fa fa-facebook"></i></a>
             </div>
         </div>
