--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -27,6 +27,8 @@
         <section id="presentation">
             <div id="textIntro">
                 <h2>Qu'est ce que Webedia ? :</h2>
+                <p>Webedia est une société média-tech et l'un des acteurs mondiaux majeurs du divertissement en ligne.</p>
+                <br>
                 <p>Expertisé sur 15 ans dans des audiences digitales et de l’édition de médias numériques, ils accompagnes les plus importants créateurs, producteurs, diffuseurs et les marques, ayant un savoir-faire unique de production et de distribution de contenues, ils ont la capacité de le faire sur toutes les plateformes. Webedia est présent dans plus de 15 pays, tels qu’en Espagne, Brésil, Allemagne, Mexique, Pologne et bien d’autres. La distribution de contenus, l’édition de marques et supports médias, la gestion de créateurs et la production audiovisuelle sont les principaux métier où Webedia structure ses activités</p>
                 <h2>Qu'aller vous retrouver sur notre site ? :</h2>
             </div>
