--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title> Histoire </title>
-    <link rel="shortcut icon" href="webedia-studios-logo-white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="medias/webedia-studios-logo-white.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li id="logo"><img src="webedia_logo.png"></li>
-				<li><a href="">Economies</a></li>
-				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
+                <li id="logo"><img src="medias/webedia_logo.png"></li>
+		<li><a href="">Economies</a></li>
+		<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html">Accueil</a></li>
             </ul>
