--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -62,6 +62,7 @@
                 "fa fa-instagram"></i></a>
                 <a href="https://fr-fr.facebook.com/webedia/" target="_blank"><i class=
                 "fa fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/company/webedia" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
         </footer>
