--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title> Histoire </title>
-    <link rel="shortcut icon" href="medias/webedia-studios-logo-white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="webedia-studios-logo-white.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li id="logo"><img src="medias/webedia_logo.png"></li>
-		<li><a href="">Economies</a></li>
-		<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
+                <li id="logo"><img src="webedia_logo.png"></li>
+				<li><a href="">Economies</a></li>
+				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html">Accueil</a></li>
             </ul>
@@ -30,107 +30,118 @@
     <div class="timeline">
 		<ul>
 			<li>
-				<h3> 27 novembre 2007 - Naissance de Webedia </h3>
 					<details>
-						<p>
-							Webedia est une entreprise créée en France par Cédric Siré.
-						</p>
+						<summary> 27 novembre 2007 - Naissance de Webedia </summary>
+
+							<p>
+								Webedia est une entreprise créée en France par Cédric Siré.
+							</p>
 					</details>
 			</li>
 			<li>
-				<h3> Décembre 2008 - Rachat du comparateur de prix : Shopoon </h3>
-				<div class="content">
-					<p>
-						Celui-ci lancé en mai 2006 par La Redoute. Webedia renomme ce comparateur de prix par : PureShopping.
-					</p>
-				</div>
+				<details>
+					<summary> Décembre 2008 - Rachat du comparateur de prix : Shopoon </summary>
+
+						<p>
+							Celui-ci lancé en mai 2006 par La Redoute. Webedia renomme ce comparateur de prix par : PureShopping.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> Janvier 2011 - Rachat d'Ozap </h3>
-				<div class="content">
-					<p>
-						Ils rachète au groupe M6 ce site spécialisé dans les médias, Webedia l'ont renommé Puremédias. 
-						Puis, ils lance également Purebreak, une plateforme d'actualité à destination des milléniaux puis Purecharts, un site d'actualité musicale. 
-					</p>
-				</div>
+				<details>
+					<summary> Janvier 2011 - Rachat d'Ozap </summary>
+						<p>
+							Ils rachète au groupe M6 ce site spécialisé dans les médias, Webedia l'ont renommé Puremédias. 
+							Puis, ils lance également Purebreak, une plateforme d'actualité à destination des milléniaux puis Purecharts, un site d'actualité musicale. 
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> 2013 - Nouvelles acquisitions </h3>
-				<div class="content">
-					<p>
-						Fimalac devient actionnaire majoritaire du groupe en mai. Le même mois, Webedia acquis donc Terrafeminia puis rachète en Juillet, pour 67 Millions d'euros, 
-						AlloCiné. En décembre, Webedia ajoute le site culinaire 750g et la plateforme culturelle Exponaute
-					</p>
-				</div>
+				<details>
+					<summary> 2013 - Nouvelles acquisitions </summary>
+						<p>
+							Fimalac devient actionnaire majoritaire du groupe en mai. Le même mois, Webedia acquis donc Terrafeminia puis rachète en Juillet, pour 67 Millions d'euros, 
+							AlloCiné. En décembre, Webedia ajoute le site culinaire 750g et la plateforme culturelle Exponaute
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> 2014 - Autres acquisitions </h3>
-				<div class="content">
-					<p>
-						Pour renforcer son poids dans l'univers du numérique, le propriétaire de CanalBlog, le groupe Fimalac avec sa nouvelle filiale Webedia, ajoute Overblog
-						en Avril puis, en Juin, Eklablog.
-					</p>
-				</div>
+				<details>
+					<summary> 2014 - Autres acquisitions </summary>
+						<p>
+							Pour renforcer son poids dans l'univers du numérique, le propriétaire de CanalBlog, le groupe Fimalac avec sa nouvelle filiale Webedia, ajoute Overblog
+							en Avril puis, en Juin, Eklablog.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> Septembre 2015 - Mixicom </h3>
-				<div class="content">
-					<p>
-						Ce rachat, du premier réseau de chaînes YouTube en France, permet le rassemblement des vedettes de la plateforme : Norman, Cyprien, Squeezie et Natoo.
-					</p>
-				</div>
+				<details>
+					<summary> Septembre 2015 - Mixicom </summary>
+						<p>
+							Ce rachat, du premier réseau de chaînes YouTube en France, permet le rassemblement des vedettes de la plateforme : Norman, Cyprien, Squeezie et Natoo.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> Novembre 2015 - Travail critiqué </h3>
-				<div class="content">
-					<p>
-						Condamné pour atteinte à la vie privée par le tribunal de grande instance de Nanterre pour un article sur le site Purepeople Webedia est critiqué pour le travail « précaire » 
-						de ses journalistes et son native advertising, la rédaction rédigeant parfois des publicités.
-					</p>
-				</div>
+				<details>
+					<summary> Novembre 2015 - Travail critiqué </summary>
+						<p>
+							Condamné pour atteinte à la vie privée par le tribunal de grande instance de Nanterre pour un article sur le site Purepeople Webedia est critiqué pour le travail « précaire » 
+							de ses journalistes et son native advertising, la rédaction rédigeant parfois des publicités.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> Fin 2015 - Guillaume Multrier </h3>
-				<div class="content">
-					<p>
-						Cofondateur, il quitte le groupe pour créer une entreprise spécialisée dans l'hôtellerie d'une valorisation revendiquée supérieure au milliard d'euros.
-					</p>
-				</div>
+				<details>
+					<summary> Fin 2015 - Guillaume Multrier </summary>
+						<p>
+							Cofondateur, il quitte le groupe pour créer une entreprise spécialisée dans l'hôtellerie d'une valorisation revendiquée supérieure au milliard d'euros.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> Juin 2020 - Pandémie de Covid-19 </h3>
-				<div class="content">
-					<p>
-						Dans le contexte de cette pandémie sur le pays, l’entreprise annonce un plan d'économies et une « rupture conventionnelle collective sur la base du volontariat » 
-						pour 80 à 90 personnes en France et 150 départs de collaborateurs à l'étranger.
-					</p>
-				</div>
+				<details>
+					<summary> 2016 </summary>
+						<p>
+							Webedia créer leur logo.
+						</p>
+						<img src="WEBEDIA_LOGO_2016.png">
+				</details>
 			</li>
 			<li>
-				<h3> Avril 2021 - "Mur de cookies" </h3>
-				<div class="content">
-					<p>
-						Webedia met en place ce système sur l'ensemble de ses sites qui en conditionne l'accès : ceux-ci ne sont gratuits qu'à condition d'accepter le dépôt de l'entièreté des cookies publicitaires 
-						tandis que la formule payante permet leur blocage.
-					</p>
-				</div>
+				<details>
+					<summary> Juin 2020 - Pandémie de Covid-19 </summary>
+						<p>
+							Dans le contexte de cette pandémie sur le pays, l’entreprise annonce un plan d'économies et une « rupture conventionnelle collective sur la base du volontariat » 
+							pour 80 à 90 personnes en France et 150 départs de collaborateurs à l'étranger.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> 2022 - Marc Ladreit de Lacharrière </h3>
-				<div class="content">
-					<p>
-						Le patron de Fimalac réfute les rumeurs de mise en vente de Webedia, mais concède rechercher de nouveaux partenaires pour accélérer son développement à l'international.
-					</p>
-				</div>
+				<details>
+					<summary> Avril 2021 - "Mur de cookies" </summary>
+						<p>
+							Webedia met en place ce système sur l'ensemble de ses sites qui en conditionne l'accès : ceux-ci ne sont gratuits qu'à condition d'accepter le dépôt de l'entièreté des cookies publicitaires 
+							tandis que la formule payante permet leur blocage.
+						</p>
+				</details>
 			</li>
 			<li>
-				<h3> Aujourd'hui - Webedia maintenant </h3>
-				<div class="content">
-					<p>
-						Présent dans plus de vingt pays tel que l'Espagne, le Brésil, l'Allemagne, la Pologne, le Mexique, Webedia rassemble plus de 276 millions de visiteurs uniques mensuels dans le monde.
-						L'entreprise se place à la 6ᵉ place des groupes de médias français en ligne avec une audience moyenne de vingt-huit millions de visiteurs uniques par mois.
-					</p>
-				</div>
+				<details>
+					<summary> 2022 - Marc Ladreit de Lacharrière </summary>
+						<p>
+							Le patron de Fimalac réfute les rumeurs de mise en vente de Webedia, mais concède rechercher de nouveaux partenaires pour accélérer son développement à l'international.
+						</p>
+				</details>
+			</li>
+			<li>
+				<details>
+					<summary> Aujourd'hui - Webedia maintenant </summary>
+						<p>
+							Présent dans plus de vingt pays tel que l'Espagne, le Brésil, l'Allemagne, la Pologne, le Mexique, Webedia rassemble plus de 276 millions de visiteurs uniques mensuels dans le monde.
+							L'entreprise se place à la 6ᵉ place des groupes de médias français en ligne avec une audience moyenne de vingt-huit millions de visiteurs uniques par mois.
+						</p>
+				</details>
 			</li>
 		</ul>
 	</div>
