--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title> Histoire </title>
-    <link rel="shortcut icon" href="medias/webedia-studios-logo-white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="webedia-studios-logo-white.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li id="logo"><img src="medias/webedia_logo.png"></li>
+                <li id="logo"><img src="webedia_logo.png"></li>
 				<li><a href="">Economies</a></li>
 				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
                 <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
@@ -32,7 +32,6 @@
 			<li>
 					<details>
 						<summary> 27 novembre 2007 - Naissance de Webedia </summary>
-
 							<p>
 								Webedia est une entreprise créée en France par Cédric Siré.
 							</p>
@@ -41,7 +40,6 @@
 			<li>
 				<details>
 					<summary> Décembre 2008 - Rachat du comparateur de prix : Shopoon </summary>
-
 						<p>
 							Celui-ci lancé en mai 2006 par La Redoute. Webedia renomme ce comparateur de prix par : PureShopping.
 						</p>
@@ -101,11 +99,11 @@
 			</li>
 			<li>
 				<details>
-					<summary> 2016 </summary>
+					<summary> 2016 - Logo de Webedia </summary>
 						<p>
 							Webedia créer leur logo.
 						</p>
-						<img src="medias/WEBEDIA_LOGO_2016.png">
+						<img src="WEBEDIA_LOGO_2016.png" id="logo_2016">
 				</details>
 			</li>
 			<li>
@@ -132,6 +130,15 @@
 						<p>
 							Le patron de Fimalac réfute les rumeurs de mise en vente de Webedia, mais concède rechercher de nouveaux partenaires pour accélérer son développement à l'international.
 						</p>
+				</details>
+			</li>
+			<li>
+				<details>
+					<summary> Juin 2022 - Nouveau logo </summary>
+						<p>
+							Webedia mettent en place un nouveau logo.
+						</p>
+						<img src="webedia_logo.png" id="new_logo">
 				</details>
 			</li>
 			<li>
