--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -103,7 +103,7 @@
 						<p>
 							Webedia créer leur logo.
 						</p>
-						<img src="WEBEDIA_LOGO_2016.png" id="logo_2016">
+						<img src="medias/WEBEDIA_LOGO_2016.png" id="logo_2016">
 				</details>
 			</li>
 			<li>
@@ -138,7 +138,7 @@
 						<p>
 							Webedia mettent en place un nouveau logo.
 						</p>
-						<img src="webedia_logo.png" id="new_logo">
+						<img src="medias/webedia_logo.png" id="new_logo">
 				</details>
 			</li>
 			<li>
