--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -10,17 +10,17 @@
     <header>
         <nav>
             <ul>
-                <li id="logo"><img src="medias/webedia_logo.png"></li>
-		<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html">Accueil</a></li>
-		<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
-		<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
-		<li><a href="">Economies</a></li>
+                <li id="logo"><img src="medias/diawebe.png"></li>
+				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html">Accueil</a></li>
+				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
+				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
+                <li><a href="">Economie</a></li>
             </ul>
         </nav>
     
 		<div id="imagePrincipale">
 			<p id="slogan"> << Engaging audiences with passion >> </p>
-		<div id="TraitSeparation"></div><br>
+				<div id="TraitSeparation"></div><br>
 			<p id="info1"> Connaissez-vous vraiment Webedia ? </p>
 		</div>
     </header>
@@ -30,12 +30,12 @@
     <div class="timeline">
 		<ul>
 			<li>
-				<details>
-					<summary> 27 novembre 2007 - Naissance de Webedia </summary>
-						<p>
-							Webedia est une entreprise créée en France par Cédric Siré.
-						</p>
-				</details>
+					<details>
+						<summary> 27 novembre 2007 - Naissance de Webedia </summary>
+							<p>
+								Webedia est une entreprise créée en France par Cédric Siré.
+							</p>
+					</details>
 			</li>
 			<li>
 				<details>
@@ -108,6 +108,14 @@
 			</li>
 			<li>
 				<details>
+					<summary> 2019 - Effectif </summary>
+						<p>
+							Durant cette année, Webedia estime leur effectif à 2400 salariés dans l'entreprise.
+						</p>
+				</details>
+			</li>
+			<li>
+				<details>
 					<summary> Juin 2020 - Pandémie de Covid-19 </summary>
 						<p>
 							Dans le contexte de cette pandémie sur le pays, l’entreprise annonce un plan d'économies et une « rupture conventionnelle collective sur la base du volontariat » 
@@ -145,8 +153,12 @@
 				<details>
 					<summary> Aujourd'hui - Webedia maintenant </summary>
 						<p>
-							Présent dans plus de vingt pays tel que l'Espagne, le Brésil, l'Allemagne, la Pologne, le Mexique, Webedia rassemble plus de 276 millions de visiteurs uniques mensuels dans le monde.
-							L'entreprise se place à la 6ᵉ place des groupes de médias français en ligne avec une audience moyenne de vingt-huit millions de visiteurs uniques par mois.
+							Présent dans plus de vingt pays tel que l'Espagne, le Brésil, l'Allemagne, la Pologne, le Mexique.
+							Webedia rassemble plus de 276 millions de visiteurs uniques mensuels dans le monde.
+						</p>
+						<p>
+							L'entreprise se place à la 6ᵉ place des groupes de médias français en ligne avec une audience moyenne de vingt-huit millions de visiteurs uniques par mois
+							avec un effectif d'environ 2700 salarié : 2300 collaborateurs pour 400 ingénieurs.
 						</p>
 				</details>
 			</li>
@@ -155,7 +167,7 @@
 	</div>
 	<footer>
 			<div id="piedDePage">
-				<span> Histoire | Created by FULCRAND Lucas</span>
+				<p> Histoire | Created by FULCRAND Lucas <span> S1 - B2 | 2022 </span></p>
 			</div>
 	</footer>
 
