--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <title>Webedia | Page d'Accueil</title>
+        <title> Diawebe | Page d'Accueil</title>
         <link rel="icon" type="image/x-icon" href="media/webedia-studios-logo-white.ico.png">
     </head>
     <body>
