--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title> Histoire </title>
+    <title> Diawebe | Histoire </title>
     <link rel="shortcut icon" href="medias/webedia-studios-logo-white.png" type="image/x-icon">
 </head>
 <body>
