--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -52,18 +52,7 @@
         </section>
         <footer>
             <div id="copyrightEtIcons">
-                <div id="copyright">
-                    <span>Page faite par Mr Billal SALMI </span>
-                </div>
-            <div id="icon">
-                <a href="https://twitter.com/WebediaFR" target="_blank"><i class=
-                "fa fa-twitter"></i></a>
-                <a href="https://www.instagram.com/webediafr/" target="_blank"><i class=
-                "fa fa-instagram"></i></a>
-                <a href="https://fr-fr.facebook.com/webedia/" target="_blank"><i class=
-                "fa fa-facebook"></i></a>
-                <a href="https://www.linkedin.com/company/webedia" target="_blank"><i class="fa fa-linkedin"></i></a>
-            </div>
+                <p> Page faite par Mr Billal SALMI <span> S1 - B2 | 2022 </span> </p>
         </div>
         </footer>
     </body>
