--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 <ul>
-                    <li id="logo"><img src="media/diawebe.png"></li>
+                    <li id="logo"><img src="media/diawebe.png" alt="./diawebe"></li>
                     <li><a href="#">Accueil</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
