--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li id="logo"><img src="medias/diawebe.png"></li>
+                <li id="logo"><img src="medias/diawebe.png" alt="./diawebe"></li>
 				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Accueil/page_a.html">Accueil</a></li>
 				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
 				<li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
@@ -103,7 +103,7 @@
 						<p>
 							Webedia créer leur logo.
 						</p>
-						<img src="medias/WEBEDIA_LOGO_2016.png" id="logo_2016">
+						<img src="medias/WEBEDIA_LOGO_2016.png" id="logo_2016" alt="logo de webedia en 2016">
 				</details>
 			</li>
 			<li>
@@ -146,7 +146,7 @@
 						<p>
 							Webedia mettent en place un nouveau logo.
 						</p>
-						<img src="medias/webedia_logo.png" id="new_logo">
+						<img src="medias/webedia_logo.png" id="new_logo" alt="nouveau logo de webedia">
 				</details>
 			</li>
 			<li>
