--- a/Le_Site_SAE.05-06/Page_histoire/Histoire.html
+++ b/Le_Site_SAE.05-06/Page_histoire/Histoire.html
@@ -19,7 +19,7 @@
         </nav>
     
 		<div id="imagePrincipale">
-			<p id="slogan"> << Engaging audiences with passion >> </p>
+			<p id="slogan"> " Engaging audiences with passion " </p>
 				<div id="TraitSeparation"></div><br>
 			<p id="info1"> Connaissez-vous vraiment Webedia ? </p>
 		</div>
