--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -4,18 +4,18 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <title> Diawebe | Page d'Accueil</title>
+        <title>Diawebe | Page d'Accueil</title>
         <link rel="icon" type="image/x-icon" href="media/webedia-studios-logo-white.ico.png">
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <li id="logo"><img src="media/diawebe.png" alt="./diawebe"></li>
-                    <li><a href="#">Accueil</a></li>
+                    <li id="logo"><img src="media/webedia_logo.png"></li>
+                    <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Economie/page_a.html">Economie</a></li>
+                    <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
-                    <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistiques</a></li>
-                    <li><a href="">Economie</a></li>
+                    <li><a href="#">Accueil</a></li>
                 </ul>
             </nav>
             <div id="imageprincipale">
@@ -52,7 +52,18 @@
         </section>
         <footer>
             <div id="copyrightEtIcons">
-                <p> Page faite par Mr Billal SALMI <span> S1 - B2 | 2022 </span> </p>
+                <div id="copyright">
+                    <span>Page faite par Mr Billal SALMI </span>
+                </div>
+            <div id="icon">
+                <a href="https://twitter.com/WebediaFR" target="_blank"><i class=
+                "fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/webediafr/" target="_blank"><i class=
+                "fa fa-instagram"></i></a>
+                <a href="https://fr-fr.facebook.com/webedia/" target="_blank"><i class=
+                "fa fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/company/webedia" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </div>
         </div>
         </footer>
     </body>
