--- a/Le_Site_SAE.05-06/Page_Accueil/page_a.html
+++ b/Le_Site_SAE.05-06/Page_Accueil/page_a.html
@@ -15,7 +15,7 @@
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Economie/page_a.html">Economie</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_stats/site_web_stats_SAE.05-06.html">Statistique</a></li>
                     <li><a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_histoire/Histoire.html">Histoire</a></li>
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="">Accueil</a></li>
                 </ul>
             </nav>
             <div id="imageprincipale">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="imagesPrestations">
                     <h4>Economie</h4>
-                    <a href="#" ><img src="media/Baby-foot1.jpg" 
+                    <a href="https://lfulcran-iut90.github.io/Webedia/Le_Site_SAE.05-06/Page_Economie/page_a.html" ><img src="media/Baby-foot1.jpg" 
                         alt="babyfoot"></a>
                 </div>
                 <div class="imagesPrestations">
